--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: zxxmdqh@163.com
 description: ""
 keyword: ""
-url: "/"              # your host, for absolute URL
+url: "mdqh.github.io"              # your host, for absolute URL
 baseurl: "/mdqh"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
