--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/home-bg.jpg
 email: zxxmdqh@163.com
 description: ""
 keyword: ""
-url: "mdqh.github.io"              # your host, for absolute URL
-baseurl: "/mdqh"         # for example, '/blog' if your blog hosted on 'host/blog'
+url: "http://zhangxiaoxiao.site"              # your host, for absolute URL
+baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
