--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
 RSS: false
-weibo_username:     zhangxiaoxiao
-zhihu_username:     zhangxiaoxiao
+weibo_username:     mdqh
+#zhihu_username:     zhangxiaoxiao
 github_username:    mdqh
 #twitter_username:  zhangxiaoxiao
-facebook_username:  zhangxiaoxiao
+#facebook_username:  zhangxiaoxiao
 
 
 
