--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
 RSS: false
-weibo_username:     mdqh
+weibo_username:     zxxzcfx@163.com
 #zhihu_username:     zhangxiaoxiao
 github_username:    mdqh
 #twitter_username:  zhangxiaoxiao
