--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ZhangXiaoXiao Blog
+title: My Blog
 SEOTitle: 我的博客 | My Blog
 header-img: img/home-bg.jpg
 email: zxxmdqh@163.com
