--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 我的博客 | My Blog
 header-img: img/home-bg.jpg
 email: zxxmdqh@163.com
 description: ""
-keyword: ""
+keyword: "张晓晓的个人博客，张晓晓，个人博客"
 url: "http://zhangxiaoxiao.site"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
